--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requests = "2.26.0"
 six = "1.16.0"
 sorl-thumbnail = "12.7.0"
 pytils = "^0.3"
-psycopg2-binary = "^2.8"
+psycopg2-binary = "2.8.6"
 gunicorn = "^20.0"
 python-decouple = "^3.5"
 
