--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx
 combine_as_imports = true
 #default_section = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
 sections = FUTURE, STDLIB, PYTILS, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
+no_lines_before=LOCALFOLDER
 force_single_line = false
 force_to_top = django
 include_trailing_comma = true
