--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ authors = ["SaPer663 <saper663ru@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 Django = "2.2.16"
-mixer = "7.1.2"
+djangorestframework = "3.12.4"
+djangorestframework-simplejwt = "4.7.2"
+PyJWT = "2.1.0"
+djoser = "^2.1.0"
+drf-yasg = "^1.20.0"
 Pillow = "8.3.1"
 requests = "2.26.0"
 six = "1.16.0"
@@ -26,6 +30,7 @@ coverage = "^6.2"
 pytest = "6.2.4"
 pytest-django = "4.4.0"
 pytest-pythonpath = "0.7.3"
+mixer = "7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
