--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,48 @@
 version: '3.8'
 
+networks:
+  default:
+    external:
+      name: nginx-proxy
+
 services:
   web:
-    build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: ./yatube/docker/Dockerfile
+      target: production_build
+      args:
+        DJANGO_ENV: production
+    command: sh ./yatube/docker/gunicorn.sh
     volumes:
-      - ./app/:/usr/src/app/
-    ports:
-      - 8000:8000
+      - django-static:/var/www/django/static
+      - django-media:/var/www/django/media
+    expose:
+      - 8000
     env_file:
-      - ./yatube/yatube/config/.env.dev
+      - ./yatube/config/.env.prod
+    environment:
+      DJANGO_DATABASE_HOST: db
     depends_on:
       - db
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=yatube
-      - POSTGRES_PASSWORD=yatube
-      - POSTGRES_DB=yatube_dev
+    env_file:
+      - ./yatube/config/.env.prod
+  nginx:
+    build: ./nginx
+    env_file:
+      - ./yatube/config/.env.prod
+    volumes:
+      - django-static:/var/www/django/static
+      - django-media:/var/www/django/media
+    
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
+  django-media:
+  django-static:
