--- a/yatube/docker/Dockerfile
+++ b/yatube/docker/Dockerfile
@@ -25,7 +25,7 @@ ENV DJANGO_ENV=${DJANGO_ENV} \
   # tini:
   TINI_VERSION=v0.19.0 \
   # poetry:
-  POETRY_VERSION=1.1.5 \
+  POETRY_VERSION=1.1.7 \
   POETRY_NO_INTERACTION=1 \
   POETRY_VIRTUALENVS_CREATE=false \
   POETRY_CACHE_DIR='/var/cache/pypoetry' \
@@ -79,6 +79,7 @@ COPY --chown=web:web ./poetry.lock ./pyproject.toml /code/
 
 # Project initialization:
 RUN echo "$DJANGO_ENV" \
+  && poetry lock --no-update\
   && poetry install \
     --no-interaction --no-ansi \
   # Upgrading pip, it is insecure, remove after `pip@21.1`
