--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     volumes:
       - django-static:/var/www/django/static
       - django-media:/var/www/django/media
-      - logs/:/var/log/nginx/
+      - "logs/:/var/log/nginx/"
     
     depends_on:
       - web
