--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       args:
         DJANGO_ENV: production
     command: sh ./yatube/docker/gunicorn.sh
+    networks:
+      - dbnet
+      - backnet
     volumes:
       - django-static:/var/www/django/static
       - django-media:/var/www/django/media
@@ -24,6 +27,8 @@ services:
   db:
     image: postgres:13.0-alpine
     restart: unless-stopped
+    networks:
+      - dbnet
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
@@ -35,6 +40,7 @@ services:
     restart: unless-stopped
     networks:
       - caddy
+      - backnet
     labels:
       caddy: saper663.ru
       caddy.reverse_proxy: "{{upstreams http 80}}"
@@ -48,6 +54,8 @@ services:
 networks:
   caddy:
     external: true
+  dbnet:
+  backnet:
 
 volumes:
   postgres_data:
