--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,5 @@
 version: '3.8'
 
-networks:
-  default:
-    external:
-      name: nginx-proxy
-
 services:
   web:
     build:
@@ -34,6 +29,8 @@ services:
       - ./yatube/config/.env.prod
   nginx:
     build: ./nginx
+    ports:
+      - 8000:80
     env_file:
       - ./yatube/config/.env.prod
     restart: unless-stopped
