--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,45 @@
-atomicwrites==1.4.0
-attrs==21.2.0
-certifi==2021.10.8
-charset-normalizer==2.0.9
-colorama==0.4.4
-django==2.2.16
-faker==10.0.0
-idna==3.3
-importlib-metadata==4.2.0
-iniconfig==1.1.1
-packaging==21.3
-pillow==8.3.1
-pluggy==0.13.1
-py==1.11.0
-pyparsing==3.0.6
-
-python-dateutil==2.8.2
-
-pytz==2021.3
-requests==2.26.0
-six==1.16.0
-sorl-thumbnail==12.7.0
-sqlparse==0.4.2
-text-unidecode==1.3
-toml==0.10.2
-typing-extensions==4.0.1
-urllib3==1.26.7
-zipp==3.6.0
+asgiref==3.5.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7"
+certifi==2021.10.8; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
+cffi==1.15.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+charset-normalizer==2.0.9; python_full_version >= "3.6.1" and python_version >= "3" and python_full_version < "4.0.0"
+coreapi==2.3.3; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+coreschema==0.0.4; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+cryptography==37.0.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+defusedxml==0.7.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+django-templated-mail==1.1.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
+django==2.2.16; python_version >= "3.5"
+djangorestframework-simplejwt==4.7.2; python_version >= "3.7"
+djangorestframework==3.12.4; python_version >= "3.5"
+djoser==2.1.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
+drf-yasg==1.20.0; python_version >= "3.6"
+gunicorn==20.1.0; python_version >= "3.5"
+idna==3.3; python_full_version >= "3.6.1" and python_version >= "3.5" and python_full_version < "4.0.0"
+importlib-metadata==1.7.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version < "3.8"
+inflection==0.5.1; python_version >= "3.6"
+itypes==1.2.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
+jinja2==3.1.2; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
+oauthlib==3.2.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+packaging==21.3; python_version >= "3.6"
+pillow==8.3.1; python_version >= "3.6"
+psycopg2-binary==2.8.6; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+pycparser==2.21; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+pyjwt==2.1.0; python_version >= "3.6"
+pyparsing==3.0.6; python_version >= "3.6"
+python-decouple==3.5
+python3-openid==3.2.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+pytils==0.3
+pytz==2021.3; python_version >= "3.5"
+requests-oauthlib==1.3.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+ruamel.yaml.clib==0.2.6; platform_python_implementation == "CPython" and python_version < "3.11" and python_version >= "3.6"
+ruamel.yaml==0.17.21; python_version >= "3.6"
+six==1.16.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+social-auth-app-django==4.0.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
+social-auth-core==4.2.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+sorl-thumbnail==12.7.0; python_version >= "3.4"
+sqlparse==0.4.2; python_version >= "3.5"
+typing-extensions==4.0.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "3.8"
+uritemplate==4.1.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
+urllib3==1.26.7; python_full_version >= "3.6.1" and python_version < "4" and python_full_version < "4.0.0"
+zipp==3.6.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version < "3.8" and python_version >= "3.6"
